src/components/post/post.module.scss
.root {
  display: flex;
  flex-direction: column;
  justify-items: start;
  gap: 0px 32px;
  background-color: #fafafa;
  // overflow-y: auto;
}

/* Hide the scrollbar for Chrome, Safari, and newer Edge */
.root::-webkit-scrollbar {
  width: 0.5em; /* Set the width of the scrollbar */
}

.root::-webkit-scrollbar-track {
  background-color: transparent; /* Set the color of the track */
}

.root::-webkit-scrollbar-thumb {
  background-color: #b4b4b4; /* Set the color of the scrollbar thumb */
  border-radius: 4px; /* Optionally, add rounded corners to the thumb */
}


.postContainer {
  // background-color: #754d4d;
  width: 100%;
  height: 100%;
  // width: 100%;
  // height: 100%;
  display: flex;
  flex-direction: column;
  background-color: transparent;
  gap: 0px;
  margin-right: 20px;
}
.postInteractionContainer {
  width: 44px;
  background-color: transparent;
  display: flex;
  height: 100%;
  flex-direction: column;
  align-items: end;
  gap: 10px;
  padding-top: 0px;
  justify-items: baseline;
  align-content: end;
  justify-content: end;
  align-self: self-end;
  margin-bottom: -5px;
}
.postCaptionContainer {
  display: flex;
  flex-direction: column;
  width: 602px;
  height: fit-content;
}
.postCreator {
  display: flex;
  flex-direction: row;
  width: 100%;
  justify-content: space-between;
  background-color: transparent;
}
.postText {
  display: flex;
  flex-direction: column;
  padding-top: 24px;
  // padding-bottom: 11px;
  row-gap: 10px;
  margin-bottom: 13px;
  align-items: baseline;

}
.postMediaContainer {
  border-radius: 8px;
  min-width: 602px;
  max-height: 598px;
  // width: 100%;
  height: 100%;
  // max-height: 815px;
  background-color: #000000;
}

.postMediaContainer video {
  max-height: 598px;
  // width: 100%;
  min-width: 602px;
  // height: 100%;
  max-width: 602px;
}

.postMediaContainerComment {
  // border-radius: 8px;
  // min-width: 602px;
  // max-height: 598px;
  width: 100%;
  height: 100%;
  // max-height: 815px;
  background-color: #000000;
}
.postMediaContainerComment video{
  max-height: 815px;
  width: 100%;
  // min-width: 602px;
  height: 100%;
  // max-width: 602px;
}

.commentRepliesDiv {
  display: flex;
  align-items: start;
  flex-direction: column;
  gap: 8px;
  margin-top: 5px;
  color: var(--foundation-neutral-neutral-700, #848484);

  /* Small/Medium */
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: 120%; /* 16.8px */
}

.repliesDropdown {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.profilePic-UserNameDiv {
  display: flex;
  flex-direction: row;
  gap: 0px 16px;
}
.userNameText {
  color: #000000;
  /* Base/Medium */
  font-family: Poppins;
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 120%; /* 19.2px */
}
.userDetailsDiv {
  display: flex;
  flex-direction: column;
  row-gap: 8px;
}
.profilePicImg {
  width: 38px;
  height: 38px;
  flex-shrink: 0;
  border-radius: 64px;
}


.userSubText {
  /* Small/Regular */
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 150%; /* 21px */
  color: #848484;
  margin: 0;
  padding: 0;
  text-align: start;
}
.followingBtn {
  border-radius: 6px;
  background-color: #5448b2;
  width: 108px;
  display: flex;
  height: 32px;
  padding: 0px 12px;
  justify-content: center;
  align-items: center;
  border-color: #5448b2;
  color: #ffffff;
  /* Small/Semibold */
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 120%; /* 16.8px */
}

.followBtn {
  border-radius: 6px;
  background-color: #ffffff;
  width: 108px;
  display: flex;
  height: 32px;
  padding: 0px 12px;
  justify-content: center;
  align-items: center;
  border-color: #5448b2;
  color: #5448b2;
  /* Small/Semibold */
  font-family: Poppins;
  font-size: 14px;
  font-style: normal;
  font-weight: 600;
  line-height: 120%; /* 16.8px */
}

.captionText {
  color: #848484;
  /* Base/Regular */
  text-align: left;
  word-wrap: normal;
  font-family: Poppins;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 150%; /* 24px */
  max-width: 600px;
  white-space: normal;
  word-wrap: break-word;
  margin: 0;
  padding: 0;
}
.postMusicInfo {
  display: flex;
  flex-direction: row;
  column-gap: 8px;
}
.musicIcon {
  width: 20px;
  height: 20px;
}
.container {
  display: flex;
  flex-direction: row;
  column-gap: 32px;
  height: 100%;
  margin-right: 20px;
  margin: 0;
  // margin-bottom: -20px
}
.interactionText {
  color: var(--default-body, #222);
  /* Extra Small/Medium */
  font-family: Poppins;
  font-size: 12px;
  font-style: normal;
  font-weight: 500;
  line-height: 120%; /* 14.4px */
  padding-top: 8px;
  padding-bottom: 0px;
}
.interactionDiv {
  display: flex;
  flex-direction: column;
  // gap: 0;
  // position: inherit;
}

/* Add your existing styles here */

/* Style for the menu */
.menu {
  display: none;
  width: 290px;
  height: 312px;
  position: absolute;
  background-color: #fff;
  border: 1px solid #ddd;
  padding: 24px;
  list-style-type: none;
  margin: 0;
  box-shadow: 10px 10px 4px -15px rgba(0, 0, 0, 0.07);

  border-radius: 8px;
  // box-shadow: 0px 6px 20px 0px rgba(0, 0, 0, 0.08);
}

.menu li {
  cursor: pointer;
  padding: 8px;
}

.popMenu {
  position: absolute;
  top: 733px;
  left: 948px;
  
}

.menuItems {
  width: 100%;
  display: flex;
  padding: 6px 28px 16px 0px;
  align-items: center;
  gap: 8px;

  color: var(--default-body, #222);
  font-family: Inter;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}
.menuItemsSvgs {
  width: 24px;
  height: 24px;
}

/* CSS for the ReportPopup */
.reportPopup {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: #fff;
  padding: 20px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
  z-index: 999;
}
/* ... */

